--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "sweetslide.adlerware.com",
-  "version": "1.0.0",
-  "description": "Slider View for react native ",
+  "name": "sweet-slider-expo",
+  "version": "1.0.1",
+  "description": "Slider View for react native | expo. ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parallex12/SweetSlide.git"
   },
   "author": "Zeeshan Karim",
   "license": "ISC"
